[package]
name = "spotify_playlist_match_streamer"
version = "0.1.0"
authors = ["Michael Ostrovsky <micha.ostrov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.4", features = ["json"] }
tokio = { version = "0.2", features = ["macros"] }
serde = { version = "1.0.106", features = ["derive"] }
